--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>miniapp-canvas-web</title>
     <style>
+      *{
+        padding: 0;
+        margin: 0;
+      }
       #my-canvas {
         width: 400px;
         height: 800px;
