--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
       *{
         padding: 0;
         margin: 0;
+        box-sizing: border-box;
       }
       #my-canvas {
         width: 400px;
